k8s/bases/api/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-prefix-strip
spec:
  stripPrefix:
    prefixes:
      - /api
