k8s/bases/api/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thorium-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`THORIUM.DOMAIN`)
    kind: Rule
    services:
    - name: thorium-api
      port: 80
